committing final products and data sources

--- a/team_reg_proposal.Rmd
+++ b/team_reg_proposal.Rmd
@@ -15,3 +15,14 @@ Do the rats run this city or do we?
 
 ### Project motivation
 Rats have continuously posed a health and infrastructure risk to NYC and its residents, and despite numerous attempts by the city to curb the pervasive nature of the animals, rats are seen daily and have cemented themselves as a part of NYC culture. We are aiming to analyze the relationship between rat sightings in NYC and features of NYC, including population density, income level, and stray cat density.
+
+### Intended final products
+*Dashboards of the following: 
+* Rat sighting vs population size by neighborhood
+* Rat sighting vs income level by neighborhood
+* Rat density map over years
+* Rat vs cat density by neighborhood
+
+### Anticipated data sources
+* NYC OpenData - Rat Sightings
+* NYC 2020 Census Data
