--- a/team_reg_proposal.Rmd
+++ b/team_reg_proposal.Rmd
@@ -26,3 +26,23 @@ Rats have continuously posed a health and infrastructure risk to NYC and its res
 ### Anticipated data sources
 * NYC OpenData - Rat Sightings
 * NYC 2020 Census Data
+
+### Planned Analyses
+*General rat sighting analyses 
+* Change in number of rat sightings by year 
+* Change in average number of rat sightings per month 
+* Analysis of rats by neighborhood 
+
+*Analysis of neighborhood rat sightings compared to income level 
+* Compare income level dataset with rat sighting dataset to assess income to rat 
+* Compare borough average income to average annual rat sightings 
+* Design a map comparing neighborhood imcome to rat sightings with latitude and longitude data 
+
+*Analysis of population density to rat sightings 
+* Population density compared to rat sighting density by neighborhood
+* Borough population density to average annual rat sightings 
+
+*Tentative feral cat colony to rat sighting analysis 
+* Distribution of feral cat colonies to rat insights 
+*  Aim is to see if a correlation exists between higher cat colony density and lower rat sightings 
+*  Assess the relationship between density of stray cats in neighborhoods and number of rat sightings
