--- a/team_reg_proposal.Rmd
+++ b/team_reg_proposal.Rmd
@@ -16,12 +16,12 @@ Do the rats run this city or do we?
 ### Project motivation
 Rats have continuously posed a health and infrastructure risk to NYC and its residents, and despite numerous attempts by the city to curb the pervasive nature of the animals, rats are seen daily and have cemented themselves as a part of NYC culture. We are aiming to analyze the relationship between rat sightings in NYC and features of NYC, including population density, income level, and stray cat density.
 
-### Intended final products
+### Intended final products1
 *   Dashboards of the following: 
-  *   Rat sighting vs population size by neighborhood
-  *   Rat sighting vs income level by neighborhood
-  *   Rat density map over years
-  *   Rat vs cat density by neighborhood
+  * Rat sighting vs population size by neighborhood
+  * Rat sighting vs income level by neighborhood
+  * Rat density map over years
+  * Rat vs cat density by neighborhood
 
 ### Anticipated data sources
 *   NYC OpenData - Rat Sightings
@@ -29,20 +29,20 @@ Rats have continuously posed a health and infrastructure risk to NYC and its res
 
 ### Planned Analyses
 *   General rat sighting analyses 
-  *    Change in number of rat sightings by year 
-  *   Change in average number of rat sightings per month 
-  *   Analysis of rats by neighborhood 
+  * Change in number of rat sightings by year 
+  * Change in average number of rat sightings per month 
+  * Analysis of rats by neighborhood 
 
 *   Analysis of neighborhood rat sightings compared to income level 
-  *   Compare income level dataset with rat sighting dataset to assess income to rat 
-  *   Compare borough average income to average annual rat sightings 
-  *   Design a map comparing neighborhood imcome to rat sightings with latitude and longitude data 
+  * Compare income level dataset with rat sighting dataset to assess income to rat 
+  * Compare borough average income to average annual rat sightings 
+  * Design a map comparing neighborhood imcome to rat sightings with latitude and longitude data 
 
 *   Analysis of population density to rat sightings 
-  *   Population density compared to rat sighting density by neighborhood
-  *   Borough population density to average annual rat sightings 
+  * Population density compared to rat sighting density by neighborhood
+  * Borough population density to average annual rat sightings 
 
 *   Tentative feral cat colony to rat sighting analysis 
-  *   Distribution of feral cat colonies to rat insights 
-  *   Aim is to see if a correlation exists between higher cat colony density and lower rat sightings 
-  *   Assess the relationship between density of stray cats in neighborhoods and number of rat sightings
+  * Distribution of feral cat colonies to rat insights 
+  * Aim is to see if a correlation exists between higher cat colony density and lower rat sightings 
+  * Assess the relationship between density of stray cats in neighborhoods and number of rat sightings
